--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,12 +120,11 @@ jobs:
           cd Debug
           windeployqt notepanda.exe
       - name: Win-${{ matrix.arch }} - ${{ matrix.qt_version }} - DEBUG
-          if: matrix.platform == 'windows-latest'
-          if: ${{ failure() }}
-          uses: DuckSoft/create-7z-action@v1.0
-          with:
-            pathSource: ./
-            pathTarget: ./BUGBUGBUG.7z
+        if: matrix.platform == 'windows-latest' && ${{ failure() }}
+        uses: DuckSoft/create-7z-action@v1.0
+        with:
+          pathSource: ./
+          pathTarget: ./BUGBUGBUG.7z
       - name: Win-${{ matrix.arch }} - ${{ matrix.qt_version }} - Uploading DEBUG
         if: matrix.platform == 'windows-latest'
         uses: actions/upload-artifact@master
