--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,18 +119,12 @@ jobs:
           cmake --install .
           cd Debug
           windeployqt notepanda.exe
-      - name: Win-${{ matrix.arch }} - ${{ matrix.qt_version }} - DEBUG
-        if: matrix.platform == 'windows-latest' && ${{ failure() }}
-        uses: DuckSoft/create-7z-action@v1.0
-        with:
-          pathSource: ./
-          pathTarget: ./BUGBUGBUG.7z
       - name: Win-${{ matrix.arch }} - ${{ matrix.qt_version }} - Uploading DEBUG
-        if: matrix.platform == 'windows-latest'
+        if: matrix.platform == 'windows-latest' && ${{ failure() }}
         uses: actions/upload-artifact@master
         with:
-          name: BBUUGG.7z
-          path: BUGBUGBUG.7z
+          name: BBUUGG
+          path: ./
       #---------------------------------------------------------
       - name: macOS - ${{ matrix.qt_version }} - Generate Dependencies and Build
         shell: bash
