--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,7 +123,7 @@ jobs:
         if: matrix.platform == 'windows-latest' && ${{ failure() }}
         uses: actions/upload-artifact@master
         with:
-          name: BBUUGG
+          name: BBUUGG - .${{ matrix.platform }}-${{ matrix.arch }}
           path: ./
       #---------------------------------------------------------
       - name: macOS - ${{ matrix.qt_version }} - Generate Dependencies and Build
