--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,9 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Checking out sources
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
       - name: Install Python 3.7 version
         if: matrix.platform == 'windows-latest'
         uses: actions/setup-python@v1
@@ -38,6 +40,9 @@ jobs:
         with: 
           toolset: 14.2
           arch: ${{ matrix.arch }}
+      - name: Win-${{ matrix.arch }} - ${{ matrix.qt_version }} - Build preparation - Download Dependencies
+        run: |
+         choco install -y ninja
       - name: Cache Qt
         id: cache-qt
         uses: actions/cache@v1
@@ -92,6 +97,22 @@ jobs:
           name: Notepanda-${{ github.sha }}.linux-${{ matrix.arch }}.qt${{ matrix.qt_version }}.AppImage
           path: build/Notepanda.AppImage
       # Windows----------------------------------------------------------------------
+      - name: Win - Build ecm
+        run: |
+          cd src/3rdparty/extra-cmake-modules
+          mkdir build
+          cd build
+          cmake .. -GNinja -DBUILD_HTML_DOCS=OFF -DBUILD_MAN_DOCS=OFF -DBUILD_QTHELP_DOCS=OFF -DBUILD_TESTING=OFF
+          cmake --build .
+          cmake --build . --target install
+      - name: Win - Build syntax highlight
+        run: |
+          cd src/3rdparty/syntax-highlighting
+          mkdir build
+          cd build
+          cmake .. -GNinja -DBUILD_HTML_DOCS=OFF -DBUILD_MAN_DOCS=OFF -DBUILD_QTHELP_DOCS=OFF -DBUILD_TESTING=OFF
+          cmake --build .
+          cmake --build . --target install
       - name: Windows - ${{ matrix.qt_version }} - Generate Dependencies and Build
         shell: bash
         if: matrix.platform == 'windows-latest'
@@ -99,22 +120,9 @@ jobs:
           CC: cl.exe
           CXX: cl.exe
         run: |
-          cd src/3rdparty/syntax-highlighting/extra-cmake-modules
           mkdir build
           cd build
-          cmake .. 
-          cmake --build .
-          cmake --install .
-          cd ../../
-          mkdir build
-          cd build
-          cmake .. -DCMAKE_PREFIX_PATH=../extra-cmake-modules/build
-          cmake --build .
-          cmake --install .
-          cd ../../../../
-          mkdir build
-          cd build
-          cmake .. -DCMAKE_BUILD_TYPE=Release -A ${{ matrix.cmakearch }} -DCMAKE_PREFIX_PATH=../src/3rdparty/syntax-highlighting/extra-cmake-modules/build -DCMAKE_PREFIX_PATH=../src/3rdparty/syntax-highlighting/build
+          cmake .. -DCMAKE_BUILD_TYPE=Release -A ${{ matrix.cmakearch }}
           cmake --build .
           cmake --install .
           cd Debug
