--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,10 +46,7 @@ message("| Welcome to contribute!                          |")
 message("|-------------------------------------------------|")
 message(" ")
 
-add_subdirectory(src/3rdparty/syntax-highlighting)
-
 find_package(Qt5 COMPONENTS Widgets Svg REQUIRED)
-include(cmake/KF5SyntaxHighlightingConfig.cmake)
 find_package(KF5SyntaxHighlighting REQUIRED)
 
 if(WIN32)
@@ -135,4 +132,4 @@ endif()
 
 include(CPack)
 
-target_link_libraries(notepanda Qt5::Widgets Qt5::Svg KF5SyntaxHighlighting)
+target_link_libraries(notepanda Qt5::Widgets Qt5::Svg KF5::SyntaxHighlighting)
