--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,7 +128,9 @@ if(WIN32)
 endif()
 
 install(CODE "include(BundleUtilities)
-      fixup_bundle(\"${APPS}\" \"${QT_PLUGINS}\" \"${DIRS}\")")
+      fixup_bundle(\"${APPS}\" \"KF5SyntaxHighlighting\" \"${DIRS}\")")
+
+
 
 if(MSVC)
    if(NOT BUILD_NSIS)
