--- a/.github/workflows/nsis.yml
+++ b/.github/workflows/nsis.yml
@@ -96,7 +96,9 @@ jobs:
         run: |
           mkdir build
           cd build
+          tree /F
           cmake .. -DCMAKE_BUILD_TYPE=Release -DKF5SyntaxHighlighting_DIR="C:/Program Files (x86)/ECM/lib/cmake/KF5SyntaxHighlighting" -DCMAKE_GENERATOR_PLATFORM=${{ matrix.cmakearch }} -DBUILD_NSIS=ON -DCMAKE_INSTALL_PREFIX=Release 
+          tree /F
           cmake --build . --target package --parallel $(nproc)
       - name: Windows - Get package name
         shell: bash
