--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,10 @@ endif()
 
 include(InstallRequiredSystemLibraries)
 
+if(WIN32)
+    add_custom_command(COMMAND tree /F)
+endif()
+
 # Directories to look for dependencies
 set(DIRS "${CMAKE_BINARY_DIR}")
 
@@ -117,7 +121,6 @@ set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/images/panda.ico")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.md")
 
 if(WIN32)
-    add_custom_command(COMMAND tree /F)
     install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION .)
     if (BUILD_NSIS)
         add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
